@@ -60,7 +60,7 @@ PKG_CHECK_MODULES(TIFILES, tifiles2 >= 0.1.2)
 AC_SUBST(TIFILES_CFLAGS)
 AC_SUBST(TIFILES_LIBS)
 
-PKG_CHECK_MODULES(TICALCS, ticalcs2 >= 0.0.8)
+PKG_CHECK_MODULES(TICALCS, ticalcs2 >= 0.1.0)
 AC_SUBST(TICALCS_CFLAGS)
 AC_SUBST(TICALCS_LIBS)
 
