@@ -38,7 +38,13 @@
 </div>
 </div>
 <h1>5. Operations</h1>
-<font size="3">This section describes the different things you
+<font size="3"><span style="font-style: italic;">Note: the SilverLink
+cable must be plugged before starting TiLP !</span><br
+ style="font-style: italic;">
+<span style="font-style: italic;">Note: your USB hand-held must be on
+before starting TiLP !</span><br>
+<br>
+This section describes the different things you
 can do with your calculator and TiLP.</font>
 <p> </p>
 <p><font size="3">TiLP can perform the following operations:</font> </p>
