@@ -28,13 +28,13 @@
 */
 
 #ifdef __WIN32__
-# define TILP_VERSION "0.09"		// For Win32
+# define TILP_VERSION "0.10"		// For Win32
 #else
 # define TILP_VERSION VERSION
 #endif
 #define TILP_REQUIRES_LIBCONV_VERSION	"0.0.3"
 #define TILP_REQUIRES_LIBFILES_VERSION	"0.1.2"
 #define TILP_REQUIRES_LIBCABLES_VERSION	"0.0.7"
-#define TILP_REQUIRES_LIBCALCS_VERSION 	"0.0.8"
+#define TILP_REQUIRES_LIBCALCS_VERSION 	"0.1.0"
 
 #endif
